--- a/package.json
+++ b/package.json
@@ -1,19 +1,36 @@
 {
-  "name": "testefbandroid",
+  "name": "firebasetasks",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start --dev-client",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/josefin-sans": "^0.2.2",
+    "@expo/webpack-config": "^0.17.2",
+    "@hookform/resolvers": "^2.9.10",
+    "@react-native-firebase/app": "^16.5.0",
+    "@types/react": "~18.0.24",
+    "@types/react-native": "~0.70.6",
     "expo": "~47.0.9",
-    "expo-splash-screen": "~0.17.5",
+    "expo-splash-screen": "^0.17.5",
     "expo-status-bar": "~1.4.2",
+    "firebase": "^9.15.0",
+    "native-base": "^3.4.25",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-dom": "^18.1.0",
+    "react-hook-form": "^7.41.5",
+    "react-native": "0.70.5",
+    "react-native-gesture-handler": "^2.8.0",
+    "react-native-reanimated": "^2.13.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-web": "^0.18.10",
+    "typescript": "^4.6.3",
+    "yup": "^0.32.11",
+    "@react-native-async-storage/async-storage": "~1.17.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
