--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "storybook": "start-storybook -p 7007",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@expo-google-fonts/josefin-sans": "^0.2.2",
     "@expo/webpack-config": "^0.17.2",
     "@hookform/resolvers": "^2.9.10",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-firebase/app": "^16.5.0",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
@@ -29,11 +32,18 @@
     "react-native-safe-area-context": "^4.4.1",
     "react-native-web": "^0.18.10",
     "typescript": "^4.6.3",
-    "yup": "^0.32.11",
-    "@react-native-async-storage/async-storage": "~1.17.3"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@storybook/addon-actions": "^5.3.21",
+    "@storybook/addon-knobs": "^5.3.21",
+    "@storybook/addon-links": "^5.3.21",
+    "@storybook/addon-ondevice-actions": "^5.3.23",
+    "@storybook/addon-ondevice-knobs": "^5.3.26",
+    "@storybook/react-native": "^5.3.27",
+    "@storybook/react-native-server": "^5.3.23",
+    "babel-loader": "^8.3.0"
   },
   "private": true
 }
