Tentei reproduzir o Newtask dentro do stories, n deu muito certo! Minha sugestão seria clonar o q funcionou e fazer os stories nele!!

--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "@expo/webpack-config": "^0.17.2",
     "@hookform/resolvers": "^2.9.10",
     "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-community/datetimepicker": "^6.7.1",
     "@react-native-firebase/app": "^16.5.0",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
-    "expo": "~47.0.9",
+    "expo": "^47.0.11",
     "expo-splash-screen": "^0.17.5",
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.15.0",
@@ -36,8 +37,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@storybook/addon-actions": "^5.3.21",
-    "@storybook/addon-knobs": "^5.3.21",
+    "@storybook/addon-actions": "^6.5.15",
+    "@storybook/addon-knobs": "^6.4.0",
     "@storybook/addon-links": "^5.3.21",
     "@storybook/addon-ondevice-actions": "^5.3.23",
     "@storybook/addon-ondevice-knobs": "^5.3.26",
