--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@storybook/addon-actions": "^6.5.15",
-    "@storybook/addon-knobs": "^6.4.0",
-    "@storybook/addon-links": "^5.3.21",
-    "@storybook/addon-ondevice-actions": "^5.3.23",
-    "@storybook/addon-ondevice-knobs": "^5.3.26",
-    "@storybook/react-native": "^5.3.27",
-    "@storybook/react-native-server": "^5.3.23",
+    "@storybook/addon-essentials": "^6.5.15",
+    "@storybook/addon-interactions": "^6.5.15",
+    "@storybook/addon-links": "^6.5.15",
+    "@storybook/addon-react-native-web": "^0.0.19",
+    "@storybook/builder-webpack4": "^6.5.15",
+    "@storybook/manager-webpack4": "^6.5.15",
+    "@storybook/react": "^6.5.15",
+    "@storybook/testing-library": "^0.0.13",
     "babel-loader": "^8.3.0"
   },
   "private": true
