Tentar em casa!

--- a/app.json
+++ b/app.json
@@ -5,6 +5,11 @@
     "version": "1.0.0",
     "assetBundlePatterns": [
       "**/*"
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "e7d53a6e-fd95-4641-9dcf-d427edba5b97"
+      }
+    }
   }
 }
