--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-native-svg": "13.4.0",
     "react-native-web": "^0.18.10",
     "typescript": "^4.6.3",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "expo-dev-client": "~2.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
