--- a/package.json
+++ b/package.json
@@ -13,42 +13,38 @@
   "dependencies": {
     "@expo-google-fonts/josefin-sans": "^0.2.2",
     "@expo/webpack-config": "^18.0.1",
-    "@hookform/resolvers": "^2.9.10",
-    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@hookform/resolvers": "^3.0.1",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/datetimepicker": "6.7.3",
-    "@react-native-firebase/app": "^16.5.0",
-    "@types/react": "~18.0.24",
-    "@types/react-native": "~0.70.6",
-    "expo": "^48.0.6",
+    "@react-native-firebase/app": "^17.4.2",
+    "@types/react": "~18.0.27",
+    "@types/react-native": "^0.71.5",
+    "expo": "^48.0.0",
+    "expo-dev-client": "~2.1.6",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.15.0",
     "native-base": "^3.4.25",
     "react": "18.2.0",
-    "react-dom": "^18.1.0",
+    "react-dom": "18.2.0",
     "react-hook-form": "^7.41.5",
     "react-native": "0.71.3",
-    "react-native-gesture-handler": "^2.9.0",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "^4.4.1",
+    "react-native-safe-area-context": "4.5.0",
     "react-native-svg": "13.4.0",
-    "react-native-web": "^0.18.10",
-    "typescript": "^4.6.3",
-    "yup": "^0.32.11",
-    "expo-dev-client": "~2.1.6"
+    "react-native-web": "~0.18.11",
+    "typescript": "^4.9.4",
+    "yup": "^1.0.2",
+    "expo-updates": "~0.16.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@storybook/addon-actions": "^6.5.15",
-    "@storybook/addon-essentials": "^6.4.22",
-    "@storybook/addon-interactions": "^6.5.15",
-    "@storybook/addon-links": "^6.5.15",
-    "@storybook/addon-react-native-web": "^0.0.19",
-    "@storybook/builder-webpack4": "^6.5.15",
-    "@storybook/manager-webpack4": "^6.5.15",
-    "@storybook/react": "^6.1.21",
-    "@storybook/testing-library": "^0.0.13",
-    "babel-loader": "^8.3.0"
+    "@babel/core": "^7.20.0",
+    "babel-loader": "^9.1.2"
+  },
+  "overrides": {
+    "@expo/config-plugins": "~6.0.0",
+    "@expo/prebuild-config": "~6.0.0"
   },
   "private": true
 }
