Consegui gerar o APK funcionando!!

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -144,11 +144,11 @@ android {
     compileSdkVersion rootProject.ext.compileSdkVersion
 
     defaultConfig {
-        applicationId "com.testefbandroid"
+        applicationId 'com.bigodrigo.TesteFBAndroid'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
         buildConfigField "boolean", "IS_NEW_ARCHITECTURE_ENABLED", isNewArchitectureEnabled().toString()
 
         if (isNewArchitectureEnabled()) {
@@ -282,7 +282,7 @@ dependencies {
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
-    implementation platform('com.google.firebase:firebase-bom:31.2.3') //adicionei pelo FB!
+    implementation platform('com.google.firebase:firebase-bom:31.3.0') //adicionei pelo FB!
 
     implementation 'com.google.firebase:firebase-analytics'
 
