--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "firebasetasks",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "storybook": "start-storybook -p 7007",
     "build-storybook": "build-storybook"
@@ -19,30 +18,30 @@
     "@react-native-firebase/app": "^17.4.2",
     "@types/react": "~18.0.27",
     "@types/react-native": "^0.71.5",
-    "expo": "^48.0.0",
+    "expo": "~48.0.10",
     "expo-dev-client": "~2.1.6",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
+    "expo-updates": "~0.16.4",
     "firebase": "^9.15.0",
     "native-base": "^3.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.41.5",
-    "react-native": "0.71.3",
+    "react-native": "0.71.6",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.11",
     "typescript": "^4.9.4",
-    "yup": "^1.0.2",
-    "expo-updates": "~0.16.4"
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "babel-loader": "^9.1.2"
   },
-  "overrides": {
+  "resolutions": {
     "@expo/config-plugins": "~6.0.0",
     "@expo/prebuild-config": "~6.0.0"
   },
