--- a/app.json
+++ b/app.json
@@ -21,6 +21,12 @@
     "android": {
       "package": "com.bigodrigo.TesteFBAndroid"
     },
-    "ios": {}
+    "ios": {},
+    "icon": "./src/assets/icon.png",
+    "splash": {
+      "backgroundColor":"#020E17",
+      "resizeMode":"cover",
+      "image":"./src/assets/splash.png"
+    }
   }
 }
